adicionando as imagens

--- a/pages/arthur.html
+++ b/pages/arthur.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/pages/arthur.css">
+    <link rel="stylesheet" href="./pages/arthur.css">
     <title>Página Arthur</title>
 </head>
 
 <body>
     <header>
         <h1>Arthur</h1> 
-        <div class="logo"> <a href="/index.html"> <img src="/img/home.png" alt="Home"></a>
+        <div class="logo"> <a href="./index.html"> <img src="./img/home.png" alt="Home"></a>
         </div>
         </header>
 
     <main>
-        <div class="ping"><img src="/img/ping.jpg" alt="pong"></div>
+        <div class="ping"><img src="./img/ping.jpg" alt="pong"></div>
 
         
     
