--- a/pages/jean.html
+++ b/pages/jean.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/pages/jean.css">
+    <link rel="stylesheet" href="./pages/jean.css">
     <title>Página Jean</title>
 </head>
 
 <body>
     <header>
         <h1>Jean</h1> 
-        <div class="logo"> <a href="/index.html"> <img src="/img/home.png" alt="Home"></a>
+        <div class="logo"> <a href="./index.html"> <img src="./img/home.png" alt="Home"></a>
         </div>
         </header>
 
     <main>
     
-        <div class="joia"><img src="/img/joia.jpg" alt="joia"></div>
+        <div class="joia"><img src="./img/joia.jpg" alt="joia"></div>
 
     
 
