--- a/pages/brayan.html
+++ b/pages/brayan.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/pages/brayan.css">
+    <link rel="stylesheet" href="./pages/brayan.css">
     <title>Página Brayan</title>
 </head>
 
 <body>
     <header>
         <h1>Brayan</h1> 
-        <div class="logo"> <a href="/index.html"> <img src="/img/home.png" alt="Home"></a>
+        <div class="logo"> <a href="./index.html"> <img src="./img/home.png" alt="Home"></a>
         </div>
         </header>
 
     <main>
-    <div class="moto"><img src="/img/moto.jpg" alt="Moto"></div>
+    <div class="moto"><img src="./img/moto.jpg" alt="Moto"></div>
 
 </main>
 </body>
