adicionando o home e imagem nas paginas usuario

--- a/pages/jean.html
+++ b/pages/jean.html
@@ -11,13 +11,13 @@
 <body>
     <header>
         <h1>Jean</h1> 
-        <div class="logo"> <a href="./index.html"> <img src="./img/home.png" alt="Home"></a>
+        <div class="logo"> <a href="../index.html"> <img src="../img/home.png" alt="Home"></a>
         </div>
         </header>
 
     <main>
     
-        <div class="joia"><img src="./img/joia.jpg" alt="joia"></div>
+        <div class="joia"><img src="../img/joia.jpg" alt="joia"></div>
 
     
 
