--- a/pages/brayan.html
+++ b/pages/brayan.html
@@ -11,12 +11,12 @@
 <body>
     <header>
         <h1>Brayan</h1> 
-        <div class="logo"> <a href="./index.html"> <img src="./img/home.png" alt="Home"></a>
+        <div class="logo"> <a href="../index.html"> <img src="../img/home.png" alt="Home"></a>
         </div>
         </header>
 
     <main>
-    <div class="moto"><img src="./img/moto.jpg" alt="Moto"></div>
+    <div class="moto"><img src="../img/moto.jpg" alt="Moto"></div>
 
 </main>
 </body>
